--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
+        python -m pip install pdoc
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -38,3 +39,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest test/
+    - name: Build documentation
+      run: |
+        pdoc src/janc_vy_tutorial -o docs
